2008-07-16  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.27

2008-07-15  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* Makefile.am: Reverted the skyos make bindist(zip) part back to
	what is used to be.

2008-07-14  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* README: Updated for the 2.0 release.

2008-07-13  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.26

2008-07-12  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* build/riscos/build-cross.sh: Added a missing 'cd ..'.

	* configure.in: Corrected a typo.

	* doc/Readme.beos: Updated.

	* vice-mint.spec, vice.spec: Release version updated to 2.0.

2008-07-10  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.25

2008-07-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.24

2008-07-07  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/html/plain/NEWS: Updated.

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.23

2008-07-04  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Makefile.am: Make sure the file Doxyfile is included in the
	distribution.

	* doc/html/Makefile.am: Make sure the files hpux.html and
	sco.html are included in the distribution.

2008-07-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/GP2X-Howto.txt, doc/Makefile.am: Added a GP2X compile
	howto text file.

2008-07-02  Andreas Matthies  <andreas.matthies@gmx.net>

	* doc/html/plain/BUGS, NEWS: Updated.

2008-07-01  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.22

2008-06-30  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/html/plain/NEWS: Added mint and sol11 ports and corrected
	a typo.

	* doc/html/solaris.html: Added sol11 port.

2008-06-29  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.21

2008-06-28  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* data/CBM-II/win_shortcuts.vsc, data/VIC20/win_shortcuts.vsc,